# RedInside-Music-Studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MiniMax Music + Lyrics API.postman_collection.json  README.md  RedInside-Music-Studio.postman_collection.json  config  docker-compose.yml  dump.rdb  nixpacks.toml  package.json  railway.json  render.yaml  storage
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  migrate-to-turso.mjs  package-lock.json  package.json  railway.toml  sync-storage.mjs  upload-files-to-r2.mjs  verify-migrations.js  youtube-worker.mjs
backend/database/: music-studio.sqlite
backend/scripts/: migrate-to-r2.js
backend/src/: server.js
backend/tests/: minimax-mock-server.js
config/: .env.example
docs/: DESKTOP_IOS_SETUP.md  TESTING_GUIDELINES.md
docs/superpowers/: IMPLEMENTATION_STATUS.md
frontend/: .gitignore  .vercelignore  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  .graphify_detect.json  .graphify_root  .graphify_uncached.txt
scripts/: dev.sh  migrate-sqlite-to-turso.mjs  railway-deploy.sh  setup-cloud-storage.sh  setup-macmini-worker.sh
(+364 files in other folders)
