[package]
name = "redinside-studio"
version = "1.0.0"
description = "RedInside Music Studio"
edition = "2021"

[lib]
name = "redinside_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
